# aerotag

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-plz.yml  test.yml
src/: aerospace.rs  cli.rs  client.rs  ipc.rs  main.rs  server.rs  state.rs  util.rs
