[package]
name = "aerotag"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
