[package]
name = "aerotag"
version = "0.3.0"
edition = "2024"
description = "Tag-based workspace manager for AeroSpace window manager"
license = "MIT"
repository = "https://github.com/typester/aerotag"
readme = "README.md"
keywords = ["macos", "aerospace", "tagging", "window-manager"]
categories = ["command-line-utilities", "os::macos-apis"]

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
